--- a/teleop_ws/src/infer_action_seq/package.xml
+++ b/teleop_ws/src/infer_action_seq/package.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>arm_tele_mujo</name>
+  <name>infer_action_seq</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="hanmg@buaa.edu.cn">meng</maintainer>
+  <maintainer email="hanmg@buaa.edu.cn">hanmg</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
-  <depend>std_msgs</depend>
-  <depend>cust_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
